force-app/main/default/objects/Document_Request__c/Document_Request__c.object-meta.xml
<CustomObject>
    <description>A request to a reseller to provide a missing or expired compliance document. Created by the autonomous compliance loop; auto-fulfilled when a matching, AI-validated file is uploaded.</description>
    <label>Document Request</label>
    <nameField>
        <displayFormat>REQ-{0000}</displayFormat>
        <label>Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Document Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>