force-app/main/default/objects/Document_Request__c/fields/Document_Category__c.field-meta.xml
<CustomField>
    <fullName>Document_Category__c</fullName>
    <description>The File Hub category being requested (e.g. Tax Document). A matching uploaded file fulfills this request.</description>
    <label>Document Category</label>
    <length>100</length>
    <type>Text</type>
</CustomField>