force-app/main/default/objects/Document_Request__c/fields/Fulfilled_Date__c.field-meta.xml
<CustomField>
    <fullName>Fulfilled_Date__c</fullName>
    <description>When a matching, AI-validated file was uploaded and the request closed.</description>
    <label>Fulfilled Date</label>
    <type>DateTime</type>
</CustomField>