force-app/main/default/objects/Document_Request__c/fields/Fulfilled_Entry__c.field-meta.xml
<CustomField>
    <fullName>Fulfilled_Entry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The File Hub entry that fulfilled this request.</description>
    <label>Fulfilled Entry</label>
    <referenceTo>File_Hub_Entry__c</referenceTo>
    <relationshipLabel>Document Requests</relationshipLabel>
    <relationshipName>Document_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>