force-app/main/default/objects/Document_Request__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>The request message sent to the reseller's primary contact.</description>
    <label>Message</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>