force-app/main/default/objects/Document_Request__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <description>Why the request was raised (e.g. "Missing" or "Expired on 2026-05-01").</description>
    <label>Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>