force-app/main/default/objects/Document_Request__c/fields/Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Date__c</fullName>
    <description>When the request was raised.</description>
    <label>Requested Date</label>
    <type>DateTime</type>
</CustomField>