force-app/main/default/objects/Document_Request__c/fields/Requirement_Label__c.field-meta.xml
<CustomField>
    <fullName>Requirement_Label__c</fullName>
    <description>Human-friendly requirement name shown in the request UI and email.</description>
    <label>Requirement Label</label>
    <length>120</length>
    <type>Text</type>
</CustomField>