force-app/main/default/objects/Document_Request__c/fields/Reseller__c.field-meta.xml
<CustomField>
    <fullName>Reseller__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The reseller asked to provide the document.</description>
    <label>Reseller</label>
    <referenceTo>Reseller__c</referenceTo>
    <relationshipLabel>Document Requests</relationshipLabel>
    <relationshipName>Document_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>